<?xml version="1.0" encoding="utf-8"?>
<!-- TODO Using ConstraintLayout
     android:textAppearance="?android:attr/textAppearanceSmall" for TextViews
     style="@style/Base.TextAppearance.AppCompat.Headline" for EditTexts
     style="@style/Widget.AppCompat.Button.Borderless" for Buttons
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layautPadding">


    <TextView
        android:id="@+id/lblBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBill"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="textEnd"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBill" />

    <TextView
        android:id="@+id/lblTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTip"
        android:layout_alignBaseline="@id/lblTipPorcentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="130dp" />

    <TextView
        android:id="@+id/lblTipPorcentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/lblTipPorcentage"
        android:layout_alignBaseline="@id/lblTip"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <EditText
        android:id="@+id/txtTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="Name"
        android:textAlignment="textEnd"
        android:layout_alignBaseline="@id/txtPercentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/lblTip" />

    <EditText
        android:id="@+id/txtPercentage"
        android:layout_width="129dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:text="Name"
        app:layout_constraintEnd_toStartOf="@+id/txtTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTipPorcentage" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTip" />

    <EditText
        android:id="@+id/txtTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotal" />

    <Button
        android:id="@+id/btnResetTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/txtReset"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <TextView
        android:id="@+id/lblPerDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/lblDiners"
        android:text="@string/lblPer_diner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetTip" />

    <EditText
        android:id="@+id/txtDiners"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="Name"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/lblRounder"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDiners" />

    <TextView
        android:id="@+id/lblDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDiners"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnResetTip"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtPerDiner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="Name"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/txtDiners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/lblPerDiners" />

    <TextView
        android:id="@+id/lblRounder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDiner" />

    <EditText
        android:id="@+id/txtPerDinerRounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRounder" />

    <Button
        android:id="@+id/btnResetDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorAccent"
        android:text="@string/txtReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDinerRounded" />

</androidx.constraintlayout.widget.ConstraintLayout>
